@@ -40,23 +40,33 @@ since: 2016
 
 subnav:
   GitHub: "https://github.com/Arondight"
+  CSDN: "http://blog.csdn.net/ispeller"
   虾米音乐: "http://www.xiami.com/u/6110365"
-  #新浪微博: "http://weibo.com/iSpeller"
-  #V2EX: "#"
   RSS: "/atom.xml"
+  Email: "mailto:mail@arondight.me"
+  #Email: "mailto:123@123.com"
+  #新浪微博: "sina weibo"
+  #GitHub: "#"
+  #V2EX: "#"
+  #RSS: "/atom.xml"
   #知乎: "zhihu"
   #豆瓣: "douban"
   #简书: "jianshu"
   #SegmentFault: ""
+  #博客园: "cnblogs"
+  #CSDN: ""
   #网易云音乐: "netease"
+  #虾米音乐: "xiami"
   #Facebook: "#"
   #Google: "#"
   #Twitter: "#"
   #LinkedIn: "#"
   #QQ: "#"
-  #微信: "speller"
+  #微信: "Wechat"
   #PayPal: "#"
   #StackOverflow: "#"
+  #CodePen: ""
+  #Plunker: ""
   #Instagram: "#"
   #Flickr: "#"
   #reddit: ""
@@ -64,7 +74,6 @@ subnav:
   #TiddlyWiki: ""
   #Tumblr: ""
   #_500px: ""
-  Email: "mailto:mail@arondight.me"
 
 # >>> Conments 评论系统 <<<
 # Chose ONE as your comment system and keep others disable.
