@@ -1,3 +1,8 @@
+v2016-05-04.2
+  * Modify post "为美好的世界献上祝福"
+  * Add link CSDN
+  * Update themes
+
 v2016-05-04
   * New post "为美好的世界献上祝福"
   * Delete post "软件和世界，愚者的中二之语"
